--- a/comb/index.html
+++ b/comb/index.html
@@ -122,7 +122,7 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
@@ -264,7 +264,7 @@ $$BA = \left[\begin{array}{ccccccccccc}7 &amp; 10 &amp; 5\\6 &amp; 7 &amp; 9\\7 
 দিয়ে ভাগ যায়, কিন্তু $3^2$  দিয়ে ভাগ যায় না৷ এবার $9n+3$-কে $3$  দিয়ে ভাগ করলে হয় $3n+1.$  
 সুতরাং $2^i\times  5^k\times 7^\ell$-কে হতে হবে $3n+1$  চেহারার, অর্থাৎ $3$  দিয়ে ভাগ 
 করলে $1$  ভাগশেষ থাকবে৷ এদিকে $2$  আর $5$-কে $3 $ দিয়ে ভাগ করলে $2$  
-হাগশেষ থাকে, এবং $7$-এর বেলায় ভাগশেষটা হয় $1.$  সুতরাং $2^i\times  5^k\times 7^\ell$-কে 
+ভাগশেষ থাকে, এবং $7$-এর বেলায় ভাগশেষটা হয় $1.$  সুতরাং $2^i\times  5^k\times 7^\ell$-কে 
 $3$  দিয়ে ভাগ করলেও যা হবে $2^i\times  2^k = 2^{i+k}$-এর ভাগশেষও তাই হতে হবে৷ মানে $2^{i+k}$-কে 
 $3$  দিয়ে ভাগ করলে $1$  ভাগশেষ আসতে হবে৷ এ থেকে একটু চিন্তা করলেই পাবে যে, $i+k$-কে even  
 হতে হবে৷ আমরা জানি $i=0,1$  আর $k=0,1,2,3$  হতে পারে৷ তাই খালি চারভাবেই  $i+k$-টা even  
@@ -379,7 +379,7 @@ name="তৃতীয়  অধ্যায়ের ভুলত্রুটি">ত
  A***  জাতীয় $3!$-টা শব্দ, P***  জাতীয় $3!$-টা শব্দ,
  SA**  জাতীয় $2!$-টা শব্দ এবং SP**  জাতীয় আরো  $2!$-টা শব্দ৷ 
 ভুলটা
- ধরেছেন সুপ্রভাত মণ্ডল৷</li>  
+ ধরেছেন প্রথমে সুপ্রভাত মণ্ডল এবং পরে অনীক সেন৷</li>  
 
 <li>
 <center>
