--- a/sm2/index.html
+++ b/sm2/index.html
@@ -233,8 +233,7 @@ textbook)</li>
 </li>
 
 
-<li>Mar 11,
-2024: Basic idea behind test of
+<li>Mar 11, 2024: Basic idea behind test of
 hypotheses: [<a href="https://www.youtube.com/watch?v=yayYsofoaGQ">video 1</a>
 | <a href="https://youtu.be/oYZlMJK-vYI?si=Ql5PQq-3-ytk1En7">video
 2</a> | <a href="testhyp.html">summary</a>]
@@ -242,6 +241,10 @@ hypotheses: [<a href="https://www.youtube.com/watch?v=yayYsofoaGQ">video 1</a>
 
 <li>Mar 15, 2024: Point estimation. Follow chapter 5 of the
 Ramachandran and Tsokos book.</li>
+
+<li>Mar 18, 2024: MLE. <a href="mle.html">Here</a> are a few
+advanced things not covered in the textbook.</li>
+
 
 </ol>
 
