--- a/sm2/mle.html
+++ b/sm2/mle.html
@@ -219,7 +219,7 @@ equation $\ell_1`(\alpha) = 0$ may not be solved analytically.
 <b>EXAMPLE:</b>&nbsp;
 <b>(Probit model)</b> We have $n$ mice (random sample from a
 cohort bred under uniform condition). The $i$-th mouse is
-given a dose of $x_i$ g of a poison. $Y_i = 1$ if
+given a dose $x_i$  of a poison. $Y_i = 1$ if
 the $i$-th mouse was killed by the dose, and $0$
 otherwise. Our data consist of the $n$
 pairs $(x_1,Y_1),...,(x_n,Y_n).$ 
