--- a/sm2/mle.html
+++ b/sm2/mle.html
@@ -152,6 +152,8 @@ Newton-Raphson</a>
 $
 \renewcommand{\v}{\vec}
 \newcommand{\do}[1]{\frac{\partial}{\partial #1}}
+\newcommand{\dt}[1]{\frac{\partial^2}{\partial #1^2}}
+\newcommand{\doo}[2]{\frac{\partial^2}{\partial #1\partial #2}}
 $
 <h1><a
 name="Advanced MLE techniques">Advanced MLE techniques</a></h1>
@@ -246,7 +248,7 @@ We need to solve $\nabla\ell(\alpha,\beta)=(0,0).$
 
 <p></p>
 I hope you will agree with me that the expressions are not
-particularly apetising!  
+particularly apetising! 
  ///
 </p>
 
@@ -284,6 +286,53 @@ Here $k$ is the number of parameter (<i>i.e.</i>, the number of
  As you might guess, the expressions often turn
 out to be quite hairy, limiting the effectiveness of the
 technique. 
+<p>
+<b>EXAMPLE:</b>&nbsp;<b>(Newton-Raphson for probit)</b>
+We had already seen that the log-likelihood equation was pretty
+nasty looking. But we can notationally simplify things
+by introducing two functions: 
+$f(x) = \phi(x)/\Phi(x)$ and $g(x) =
+\phi(x)/(1-\Phi(x)).$
+  
+<p></p>
+
+It is easy to see that $f'(x) = -f(x)(x+f(x))$ and $g'(x) = -g(x)(x-g(x)).$
+<p></p>
+With these definitions, we can now write
+$$\begin{eqnarray*}
+\do \alpha \ell &amp; = &amp; \sum h_i(\alpha,\beta)\\
+\do \beta  \ell &amp; = &amp; \sum x_i h_i(\alpha,\beta),
+\end{eqnarray*}$$ 
+where 
+$$
+h_i(\alpha,\beta) = Y_i f(\alpha + \beta x_i) - (1-Y_i) g(\alpha + \beta x_i),
+$$
+and hence
+$$\begin{eqnarray*}
+\do \alpha h_i(\alpha,\beta) &amp; = &amp; Y_i f'(\alpha + \beta x_i) - (1-Y_i) g'(\alpha + \beta x_i),\\
+\do \beta h_i(\alpha,\beta) &amp; = &amp; x_i \do \alpha h_i(\alpha,\beta).
+\end{eqnarray*}$$
+
+
+So 
+$$\begin{eqnarray*}
+\dt \alpha \ell &amp; = &amp; \sum \do \alpha h_i(\alpha,\beta)\\
+\dt \beta \ell &amp; = &amp; \sum x_i^2\do \alpha  h_i(\alpha,\beta)\\
+\doo \alpha \beta  \ell &amp; = &amp; \sum x_i \do \alpha h_i(\alpha,\beta).
+\end{eqnarray*}$$ 
+Then the Newton-Raphson iteration is
+$$
+\left[\begin{array}{ccccccccccc}\alpha_{k+1} \\ \beta_{k+1} 
+\end{array}\right] = \left[\begin{array}{ccccccccccc}\alpha_k \\ \beta_k 
+\end{array}\right]
+- \left[\begin{array}{ccccccccccc}\dt \alpha \ell &amp; \doo \alpha \beta \ell\\ \doo \alpha
+\beta \ell &amp; \dt \beta \ell
+\end{array}\right]^{-1} \left[\begin{array}{ccccccccccc}\do \alpha \ell\\\do \beta \ell
+\end{array}\right].
+$$
+Here the RHS is evaluated at $(\alpha_k,\beta_k).$
+ ///
+</p>
 
 <h2><a
 name="Technique 2: Fisher`s scoring method">Technique 2: Fisher`s scoring method</a></h2>
@@ -322,14 +371,36 @@ the code.</li>
 <li>As we are averaging out over all possible samples, the
 undulations specific to the given random sample are ironed out
 to some extent (they are still there in the score function,
-though). So less chance of the iterative method getting stuck at
-a local max.</li>
+though). So possibly less chance of the iterative method getting stuck at
+a local max. Never seen any demonstration of this.</li>
 
-<li>Under fairly general conditions, the information matrix is
+<li>Under fairly general conditions, the negative of the information matrix is
 the limiting covariance matrix of the MLE. This is automatically
 computed as a byproduct.</li>
 
 </ol>
+
+
+<p>
+<b>EXAMPLE:</b>&nbsp;<b>(Fisher's scoring method for probit)</b>
+For Fisher's scoring method we need the expectation of the Hessian
+matrix. This involves 
+$$
+E\left(\do \alpha h_i(\alpha,\beta) \right)  =  E(Y_i) f'(\alpha + \beta x_i)
+- (1-E(Y_i)) g'(\alpha + \beta x_i).
+$$
+Since $E(Y_i) = \Phi(\alpha + \beta x_i),$ we get some
+simplification:
+$$
+E(Y_i) f'(\alpha + \beta x_i) = -\phi(\alpha + \beta x_i) (x + f(x))
+$$
+and 
+$$
+(1-E(Y_i)) g'(\alpha + \beta x_i) = -\phi(\alpha + \beta x_i) (x - g(x))
+$$
+
+ ///
+</p>
 <hr/>
 <table width="100%" border="0">
 <tr>
