--- a/sm2/index.html
+++ b/sm2/index.html
@@ -245,6 +245,8 @@ Ramachandran and Tsokos book.</li>
 <li>Mar 18, 2024: MLE. <a href="mle.html">Here</a> are a few
 advanced things not covered in the textbook.</li>
 
+<li>Mar 22, 2024: <a href="mle.r">R code</a> for mle in probit.</li>
+
 
 </ol>
 
