--- a/sm2/news.html
+++ b/sm2/news.html
@@ -2,6 +2,10 @@
 <body>
 <table border="1">
 
+<tr><td>Mar 22, 2024</td>
+<td>Corrected some typos in the <a href="mle.html" target="naya">MLE page</a>.
+</td></tr>
+
 <tr><td>Feb 26, 2024</td>
 <td>Projects posted.
 </td></tr>
