--- a/sm2/mle.html
+++ b/sm2/mle.html
@@ -346,18 +346,13 @@ While this might appear even hairier, usually the expectation
 often simplifies things by averaging over all possible
 data. Note that $I(\v \theta)$, unlike $H(\v \theta)$
 is <i>not</i> a function of the random sample.
+
 <p></p>
-Under fairly general conditions
-$$
-I(\v \theta) = E[(\nabla\ell(\v \theta))^T\nabla\ell(\v \theta)].
-$$ 
+
 Notice that $\nabla\ell(\v \theta)$ is a <i>row</i>
 vector. So the quantity inside the expectation is a $k\times
 k$ matrix, where $k$ is the number of components in $\theta.$
-<p></p>
 
-This formula, being in terms first derivatives only, may be
-computationally easier.
 <h3><a
 name="Advantages of Fisher`s scoring method over
 Newton-Raphson">Advantages of Fisher`s scoring method over
@@ -365,7 +360,7 @@ Newton-Raphson</a></h3>
 There are three advantages:
 <ol type="">
 
-<li>There expressions involved in the iterative scheme is analytically more tractable. So it is easier to write
+<li>The expressions involved in the iterative scheme is analytically more tractable. So it is easier to write
 the code.</li>
 
 <li>As we are averaging out over all possible samples, the
@@ -374,7 +369,8 @@ to some extent (they are still there in the score function,
 though). So possibly less chance of the iterative method getting stuck at
 a local max. Never seen any demonstration of this.</li>
 
-<li>Under fairly general conditions, the negative of the information matrix is
+<li>Under fairly general conditions, the negative of the inverse
+of the information matrix is
 the limiting covariance matrix of the MLE. This is automatically
 computed as a byproduct.</li>
 
