--- a/sm2/index.html
+++ b/sm2/index.html
@@ -247,6 +247,9 @@ advanced things not covered in the textbook.</li>
 
 <li>Mar 22, 2024: <a href="mle.r">R code</a> for mle in probit.</li>
 
+<li>Mar 27, 2024: <a href="em.html">EM algorithm</a>
+</li>
+
 
 </ol>
 
