--- a/sm2/mle.html
+++ b/sm2/mle.html
@@ -451,8 +451,9 @@ statistics, one of which is relevant here:
 <legend><b><i>Theorem</i></b></legend>
 Under some regularity conditions, 
 $$
-I(\v \theta)^{1/2} (\hat \theta_{mle}- \theta)\rightarrow N(\v0,I).
+I(\v \theta)^{1/2} (\hat \theta_{mle}- \theta)\rightarrow N_k(\v0,I),
 $$
+where $k$ is the dimensionof $\theta.$
 </fieldset>
 It is more commonly (though less rigourously) remembered as 
 <blockquote>"For
