--- a/sm2/mle.html
+++ b/sm2/mle.html
@@ -388,9 +388,9 @@ to some extent (they are still there in the score function,
 though). So possibly less chance of the iterative method getting stuck at
 a local max. Never seen any demonstration of this.</li>
 
-<li>Under fairly general conditions, the negative of the inverse
+<li>Under fairly general conditions,  the inverse
 of the information matrix is
-the limiting covariance matrix of the MLE. This is automatically
+the asymptotic covariance matrix of the MLE. This is automatically
 computed as a byproduct.</li>
 
 </ol>
@@ -398,7 +398,7 @@ computed as a byproduct.</li>
 
 <p>
 <b>EXAMPLE:</b>&nbsp;<b>(Fisher`s scoring method for probit)</b>
-For Fisher's scoring method we need the expectation of the Hessian
+For Fisher`s scoring method we need the expectation of the Hessian
 matrix. This involves 
 $$
 E\left(\do \alpha h_i(\alpha,\beta) \right)  =  E(Y_i) f'(\alpha + \beta x_i)
@@ -451,14 +451,14 @@ statistics, one of which is relevant here:
 <legend><b><i>Theorem</i></b></legend>
 Under some regularity conditions, 
 $$
-I(\v \theta)^{1/2} (\hat \theta_{mle}- \theta)\rightarrow N_k(\v0,I),
+I(\v \theta)^{1/2} (\hat \v\theta_{mle}- \v\theta)\rightarrow N_k(\v0,I),
 $$
-where $k$ is the dimensionof $\theta.$
+where $k$ is the dimension of $\v \theta.$
 </fieldset>
 It is more commonly (though less rigourously) remembered as 
 <blockquote>"For
 large enuogh $n$, the sampling distribution of $\hat
-\theta_{mle}$ is roughly $N_k(\theta, I(\theta)^{-1}).$"
+\v\theta_{mle}$ is roughly $N_k(\v\theta, I(\v\theta)^{-1}).$"
 </blockquote>
 <hr/>
 <table width="100%" border="0">
