--- a/sm2/mle.html
+++ b/sm2/mle.html
@@ -451,14 +451,14 @@ statistics, one of which is relevant here:
 <legend><b><i>Theorem</i></b></legend>
 Under some regularity conditions, 
 $$
-I(\v \theta)^{1/2} (\hat \v\theta_{mle}- \v\theta)\rightarrow N_k(\v0,I),
+I(\v \theta)^{1/2} (\hat {\v\theta}_{mle}- \v\theta)\rightarrow N_k(\v0,I),
 $$
 where $k$ is the dimension of $\v \theta.$
 </fieldset>
 It is more commonly (though less rigourously) remembered as 
 <blockquote>"For
-large enuogh $n$, the sampling distribution of $\hat
-\v\theta_{mle}$ is roughly $N_k(\v\theta, I(\v\theta)^{-1}).$"
+large enuogh $n$, the sampling distribution of $\hat{
+\v\theta}_{mle}$ is roughly $N_k(\v\theta, I(\v\theta)^{-1}).$"
 </blockquote>
 <hr/>
 <table width="100%" border="0">
