--- a/sm2/em.html
+++ b/sm2/em.html
@@ -417,7 +417,10 @@ We shall reserve the symbols $p$ and $q$ for the true
 (unknown) values of the parameters.
 Then 
 $$
-E(\ell_{com}(a,b)|\text{data}) = \text{terms free of a,b} + E(A|\text{data})\log a + E(B|\text{data})\log b + E(C|\text{data})\log (1-a-b).
+E(\ell_{com}(\alpha ,\beta )|\text{data}) = \text{terms free of
+\alpha ,\beta } + E(A|\text{data})\log \alpha  +
+E(B|\text{data})\log \beta  + E(C|\text{data})\log (1-\alpha
+-\beta ).
 $$
 Now 
 $$\begin{eqnarray*}
@@ -426,14 +429,14 @@ E(B|\text{data}) &amp; = &amp; E(n_{b b}|\text{data})+n_B+n_{AB} = n_B\times\fra
 E(C|\text{data}) &amp; = &amp; E(n_{o o}|\text{data}) = n_O=C_1.
 \end{eqnarray*}$$
 Note that the conditional expectation is a function of the dummy
-variables $a,b$ as well as the constants $p,q.$ So we
-denote it by $Q(a,b|p,q).$ As $(a,b)$ and $(p,q)$ both  take values
+variables $\alpha ,\beta $ as well as the constants $p,q.$ So we
+denote it by $Q(\alpha ,\beta |p,q).$ As $(\alpha, \beta )$ and $(p,q)$ both  take values
 in the parameter space, this notation might confuse you at
 first. 
-Now we shall find the maximum of $Q(a,b|p,q)$
-wrt $(a,b)$. Remember that $p,q$ are constants, and
+Now we shall find the maximum of $Q(\alpha ,\beta |p,q)$
+wrt $(\alpha ,\beta )$. Remember that $p,q$ are constants, and
 play no role in the maximisation. This is the M-step. The output
-of this step consists of the maximising $(a,b),$ which may
+of this step consists of the maximising $(\alpha ,\beta ),$ which may
 involve $p,q.$ 
 
 <p></p>
