--- a/sm2/news.html
+++ b/sm2/news.html
@@ -2,6 +2,11 @@
 <body>
 <table border="1">
 
+<tr><td>Apr 01, 2024</td>
+<td>Practice problem for numerical MLE
+computation <a href="mleex.html" target="naya">posted here</a>.
+</td></tr>
+
 <tr><td>Mar 22, 2024</td>
 <td>Corrected some typos in the <a href="mle.html" target="naya">MLE page</a>.
 </td></tr>
