--- a/sm2/index.html
+++ b/sm2/index.html
@@ -250,6 +250,9 @@ advanced things not covered in the textbook.</li>
 <li>Mar 27, 2024: <a href="em.html">EM algorithm</a>
 </li>
 
+<li>Apr 01, 2024: <img src="image/alert.png"> <a href="mleex.html">Numerical MLE
+computation practice problem set</a>. (This is not an
+April-fool prank!)</li> 
 
 </ol>
 
