--- a/sm2/em.html
+++ b/sm2/em.html
@@ -337,7 +337,7 @@ n_{a b}(\log 2+\log p+\log q)\\
 where 
 $$
 A = 2n_{a a}+n_{a o}+n_{a b},\quad B = 2n_{b b}+n_{b o}+n_{a
-b},\quad C = 2n_{o o}.
+b},\quad C = 2n_{o o}+n_{a o}+n_{b o}.
 $$
 This is one is far more tractable, and here MLE may be found
 analytically. 
@@ -411,7 +411,7 @@ $$
 where 
 $$
 A = 2n_{a a}+n_{a o}+n_{a b},\quad B = 2n_{b b}+n_{b o}+n_{a
-b},\quad C = 2n_{o o}.
+b},\quad C = 2n_{o o} + n_{a o} + n_{b o}.
 $$
 We shall reserve the symbols $p$ and $q$ for the true
 (unknown) values of the parameters.
@@ -426,7 +426,8 @@ Now
 $$\begin{eqnarray*}
 E(A|\text{data}) &amp; = &amp; E(n_{a a}|\text{data})+n_A+n_{AB} = n_A\times\frac{p^2}{p^2+2p(1-p-q)}+n_A+n_{AB}=A_1\\ 
 E(B|\text{data}) &amp; = &amp; E(n_{b b}|\text{data})+n_B+n_{AB} = n_B\times\frac{q^2}{q^2+2q(1-p-q)}+n_B+n_{AB}=B_1\\ 
-E(C|\text{data}) &amp; = &amp; E(n_{o o}|\text{data}) = n_O=C_1.
+E(C|\text{data}) &amp; = &amp; E(2n_{o o}+n_{a o} + n_{b o}|\text{data})
+= 2n_O+ \frac{2(1-p-q)}{2-p-2q}n_A+\frac{2(1-p-q)}{2-q-2p}n_B =C_1.
 \end{eqnarray*}$$
 Note that the conditional expectation is a function of the dummy
 variables $\alpha ,\beta $ as well as the constants $p,q.$ So we
@@ -500,7 +501,7 @@ em = function(param) {
   p = param[1]; q = param[2]; r = 1-p-q
   A1 = nA*p/(p+2*r)+nA+nAB
   B1 = nB*q/(q+2*r)+nB+nAB
-  C1 = nO
+  C1 = 2*nO + nA*2*r/(2-p-2*q) + nB*2*r/(2-q-2*p)
   newval = c(A1,B1)/(A1+B1+C1)
   cat(newval,'\n')
   newval
