--- a/sm2/news.html
+++ b/sm2/news.html
@@ -3,6 +3,12 @@
 <table border="1">
 
 <tr><td>Apr 01, 2024</td>
+<td>A serious mistake in 
+the computation of E(C|data) in  <a href="em.html" target="naya">first page on EM</a> has been
+corrected. Thanks to Aishee and Srijan.
+</td></tr>
+
+<tr><td>Apr 01, 2024</td>
 <td>Practice problem for numerical MLE
 computation <a href="mleex.html" target="naya">posted here</a>.
 </td></tr>
