--- a/linalg/rref.html
+++ b/linalg/rref.html
@@ -10,7 +10,7 @@
 <h1>RREF using GJ algorithm</h1>
 <form>
 <select id="whichexm">
-<option onClick="example(1)">Example 1</option>
+<option onClick="alert(1)">Example 1</option>
 <option onClick="example(2)">Example 2</option>
 <option onClick="example(3)">Example 3</option>
 <option onClick="example(4)">Example 4</option>
