--- a/topo/topo1.html
+++ b/topo/topo1.html
@@ -192,8 +192,7 @@ non-empty set  নিয়ে, ধরো তার নাম দিলাম $X.$ 
 <p></p>
 <b>SOLUTION:</b>হ্যাঁ৷ কারণ $\phi$  আর $X $ দুজনেই আছে৷ যতরকম
  intersection  আর union  সম্ভব, তারাও আছে৷ <p></p>
-<div class="fb-comments" data-href="#ex1" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#ex1" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -242,8 +241,7 @@ Hence closed under finite intersection.
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.2a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.2a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -255,8 +253,7 @@ Consider the set ${\mathbb N}$ of natural numbers and let $A_n =
 collection $\{A_n~:~n\in{\mathbb N}\}\cup\{\phi\}$ is a topology on ${\mathbb N}.$[3]
 <p></p>
 <b>SOLUTION:</b>আগেরটার মতই৷<p></p>
-<div class="fb-comments" data-href="#2022.2a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.2a" class="fb-comments"></div> ///
 </p>
 তোমার গুচ্ছে যেসব subset  নিয়েছ, তাদেরকে বলব একেকটা open subset.  
 <p></p>
@@ -297,8 +294,7 @@ topology and $K=\left\{\frac 1n~:~n=1,2,...\right\}.$ Then $K$ is
 <b>SOLUTION:</b>$0$  একটা limit point.  কিন্তি $0\not\in K.$  তাই
  closed  নয়৷ আবার $1\in K,$  কিন্তু $1$-এর কোনো
  neighbourhood  $K$-র মধ্যে নেই৷ তাই open  বা closed  কোনোটাই নয়৷<p></p>
-<div class="fb-comments" data-href="#2023.1c" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.1c" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -321,8 +317,7 @@ topology on the set of real numbers, ${\mathbb R}$, is given by
 <p></p>
 <b>SOLUTION:</b>একটাই limit point  আছে, $1.$  এবং সেটা
  set-এর বাইরে৷ তাই উত্তর হবে $A\cup\{1\}.$<p></p>
-<div class="fb-comments" data-href="#2023.1d" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.1d" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -340,8 +335,7 @@ Let $A = \{(x,y)~:~x\in{\mathbb Q}\}.$  This is dense in ${\mathbb R}^2.$  Hence
 $A^c$ is also dense. So every open ball intersects $A^c.$  Hence interor of $A $ is $\phi.$  
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2023.5b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.5b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -383,8 +377,7 @@ $$|d(x,y)-d(a,b)| \leq |d(x,y)-d(a,y)+d(a,y)-d(a,b)| \leq ??$$
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.8b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.8b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -396,8 +389,7 @@ is also a topological invariant.[3]
 <p></p>
 <b>SOLUTION:</b>
 <p></p>
-<div class="fb-comments" data-href="#2022.8a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.8a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -409,8 +401,7 @@ that $\bar A=\{x\in X~:~d(x,A)=0\}$.[2]
 <p></p>
 <b>SOLUTION:</b>
 <p></p>
-<div class="fb-comments" data-href="#2022.4b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.4b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -442,8 +433,7 @@ Hence the two topologies are the same.
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.4" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.4" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -495,8 +485,7 @@ topology on $X.$ </li>
 
 <p></p>
 <b>SOLUTION:</b>শেষেরটাই খালি ভুল, কারণ first countable  নয়৷<p></p>
-<div class="fb-comments" data-href="#2023.1a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.1a" class="fb-comments"></div> ///
 </p>
 
 <h2><a
@@ -524,8 +513,7 @@ in ${\mathbb R}^2$ respectively, then
 <p></p>
 <b>SOLUTION:</b>যেকোনো circle-এর মধ্যে যেকোনো বিন্দুকে ঘিরে একটা
  rectangle  ঢোকানো যায়, এবং তার উল্টোটাও করা সম্ভব৷ তাই $\tau_1 = \tau_2.$<p></p>
-<div class="fb-comments" data-href="#2021.1a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2021.1a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -552,8 +540,7 @@ following is true?
  counterexample  হল $X={\mathbb R}$  (usual topology) আর $A =
  (-\infty,0)\cup(0,\infty).$  এটা তৃতীয়টার বেলাতেও counterexample.  চার
  নম্বরের জন্য counterexample  হবে ${\mathbb R}$-এর মধ্যে ${\mathbb Q}.$  <p></p>
-<div class="fb-comments" data-href="#2021.1b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2021.1b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -575,8 +562,7 @@ false?
 
 <p></p>
 <b>SOLUTION:</b>শেষেরটা ভুল, কারণ $A$-কে open  হতেই হবে৷<p></p>
-<div class="fb-comments" data-href="#2021.1c" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2021.1c" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -600,8 +586,7 @@ closed in $(X,\tau).$[3]
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.7a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.7a" class="fb-comments"></div> ///
 </p>
 
 <p>
@@ -696,8 +681,7 @@ So $x &gt; \max\{a,b\}.$
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.6a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.6a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -721,8 +705,7 @@ Thus, $\overline A\cap Y$  is the smallest closed set in $Y$  containing $A.$  H
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.5a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.5a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -755,8 +738,7 @@ Since $B$  is dense in $A,$  we have $U\cap A \cap B\neq \phi.$  But $B\subseteq
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.1j" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.1j" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -783,8 +765,7 @@ Then $V $ is a non-empty open set, and hence $V\subseteq D\neq\phi.$  If $x\not\
 If $x\in D,$  then $x\in U\cap D\subseteq \overline{U\cap D}.$  Hence done.
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2022.3b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.3b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -816,8 +797,7 @@ If $\sigma''$  is another smallest such topology, then $\sigma''\subseteq \sigma
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.4a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.4a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -860,8 +840,7 @@ Shall show that
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.6a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.6a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -880,8 +859,7 @@ But $\overline{A\cap B} = \overline{\phi}=\phi.$
  </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.6b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.6b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -915,8 +893,7 @@ In this case $a = b = c.$
 <div class="box">Check</div>Then obviously $c\in \{d\}\subseteq \{a\}\cap \{b\},$  as required.
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2023.7a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.7a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -939,8 +916,7 @@ Also $\{1\}$  is open in $(Y,\tau').$  But $f ^{-1} (\{1\}) = \{0\}$  is not ope
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.7b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.7b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -961,8 +937,7 @@ on $X$ such that each projection map is continuous.
 <p></p>
 <b>SOLUTION:</b>
 <p></p>
-<div class="fb-comments" data-href="#2023.8" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.8" class="fb-comments"></div> ///
 </p>
 
 <p>
@@ -994,8 +969,7 @@ The fourth option is false.  A counterexample is $A = {\mathbb Q}$  in $\X={\mat
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.1b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.1b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1006,8 +980,7 @@ Find the derived set of $\{1\}$ in the above topological space.[2]
 <p></p>
 <b>SOLUTION:</b>
 <p></p>
-<div class="fb-comments" data-href="#2023.2b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.2b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1048,8 +1021,7 @@ Hence $P$  is closed.
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2021.1j" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2021.1j" class="fb-comments"></div> ///
 </p>
 
 <p>
@@ -1080,8 +1052,7 @@ on ${\mathbb R}$.</li>
  becomes disconnected. But $\{(x,y)~:~x^2+y^2=1\}$ cannot be made disconnected by removing just a single point. </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2021.1i" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2021.1i" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1098,8 +1069,7 @@ The function $\tan x$  is a homeomorphism from $\left(-\frac \pi2,\frac \pi2\rig
  it is continuous, bijective and its inverse is continuous.
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2022.6b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.6b" class="fb-comments"></div> ///
 </p>
 
 <p>
@@ -1128,8 +1098,7 @@ Also $[0,1]$  are $[2,3]$  complements of each other in $Y.$  So they are closed
 Hence both of them are clopen in $Y.$  
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2022.1f" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.1f" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1157,8 +1126,7 @@ $(0.4,0.6)$  is a neighbourhood of $\frac 12$  in our space. Since $\frac 12$  i
 Only the set given in option 2 is open.
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2022.1g" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.1g" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1188,8 +1156,7 @@ Conversely, let $b\in\partial A.$  Let, if possible, $b\not\in A.$  Then $A^c$  
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.7b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.7b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1209,8 +1176,7 @@ Any set in ${\cal C}$  containing $\sqrt2$  is of the form $[a,b)$  with $a &lt;
  where $a,b\in{\mathbb Q}.$  Since $a &lt; \sqrt2,$  hence $[a,b)\not\subseteq A.$
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2022.5a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.5a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1241,8 +1207,7 @@ So $\tau=\sigma$, as required.
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.5b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.5b" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1261,8 +1226,7 @@ Hence $A$  must be dense in $X.$
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.3a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.3a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1274,8 +1238,7 @@ topological space.[2]
 <p></p>
 <b>SOLUTION:</b>
 <p></p>
-<div class="fb-comments" data-href="#2022.2b" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.2b" class="fb-comments"></div> ///
 </p>
 
 <p>
@@ -1300,8 +1263,7 @@ of $\{1\}$ is
  closed set containing $\{1\}.$  Hence the last option is correct.</font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.1i" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.1i" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1332,8 +1294,7 @@ Every infinite set is dense in cofinite topology. The given set is infinite. So 
 Hence the last option is correct. 
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2022.1h" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.1h" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1367,8 +1328,7 @@ So the last option is correct
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2022.1a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.1a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1407,8 +1367,7 @@ So $\tau_u = \tau_\ell\cap \tau_r,$  as required.
 </font></b>
 
 <p></p>
-<div class="fb-comments" data-href="#2023.3a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.3a" class="fb-comments"></div> ///
 </p>
 
 <p>
@@ -1433,8 +1392,7 @@ the usual topology on ${\mathbb R},$ respectively, then
 Since $\tau_u\subseteq \tau_\ell,$  hence continuous. But since $\tau_\ell\not\subseteq\tau_u,$  hence not open.
 </font></b>
 <p></p>
-<div class="fb-comments" data-href="#2023.1e" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.1e" class="fb-comments"></div> ///
 </p>
 
 <p></p>
@@ -1449,8 +1407,7 @@ numbers, ${\mathbb R}.$[2]
 <b>SOLUTION:</b>
 আগেই করেছি৷ 
 <p></p>
-<div class="fb-comments" data-href="#2023.3a" data-width="" data-numposts="5"></div>
- ///
+<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.3a" class="fb-comments"></div> ///
 </p>
 
 <p></p>
