--- a/topo/topo1.html
+++ b/topo/topo1.html
@@ -388,6 +388,16 @@ What is a metric invariant? Correct of justify: A metric invariant
 is also a topological invariant.[3]
 <p></p>
 <b>SOLUTION:</b>
+<b><font color="#0000cc">
+Let $(X,d)$  and $(X',d')$  be two metric spaces. Let $f:X\rightarrow X'$  be a bijection such that $\forall a,b\in X~~d'(f(a),f(b)) = d(a,b).$
+Any property of $(X,d)$  that is preserved by any such map is called a metric invariant. 
+<p></p>
+The statement is not correct. For instance, the property that ''three points are equidistant from each other'' is a metric
+ invariant. But it is not topological invariant. 
+<p></p>
+However, every topological invariant property is also metic invariant, because any such $f$  must be a homeomorphism.
+ </font></b>
+
 <p></p>
 <div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.8a" class="fb-comments"></div> ///
 </p>
@@ -400,6 +410,16 @@ Let $(X,d)$ be a metric space and $A\subseteq X.$ Prove
 that $\bar A=\{x\in X~:~d(x,A)=0\}$.[2]
 <p></p>
 <b>SOLUTION:</b>
+<b><font color="#0000cc">
+Pick any $b\in \bar A.$  If $x\in A,$  then done. Otherwise $x\in A'.$  Then
+ $\forall n\in{\mathbb N}~~\exists a_n\in
+ A\setminus\{x\}~~d(a_n,b)&lt;\frac 1n.$  
+<p></p>
+So $\forall n\in{\mathbb N}~~d(b,A)\leq \frac 1n.$  Thus $d(b,A) = 0,$  as required. 
+<p></p>
+Conversely, let $d(x,A)=0.$ 
+</font></b>
+
 <p></p>
 <div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.4b" class="fb-comments"></div> ///
 </p>
@@ -484,7 +504,7 @@ topology on $X.$ </li>
 
 
 <p></p>
-<b>SOLUTION:</b>শেষেরটাই খালি ভুল, কারণ first countable  নয়৷<p></p>
+<b>SOLUTION:</b>শেষেরটাই খালি ভুল, কারণ $T_2$ নয়৷<p></p>
 <div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.1a" class="fb-comments"></div> ///
 </p>
 
@@ -536,7 +556,7 @@ following is true?
 
 <p></p>
 <b>SOLUTION:</b>$A$  অবষহ্যই $X$-বে মধ্যে dense  হবে৷ সেটাই
- dense  হবার সংজ্ঞা৷ বাকিগুলো নাই হতে পারে৷ যেমন প্রথমটা
+ dense  হবার সংজ্ঞা৷ বাকিগুলো নাই হতে পারে৷ যেমন প্রথমটার
  counterexample  হল $X={\mathbb R}$  (usual topology) আর $A =
  (-\infty,0)\cup(0,\infty).$  এটা তৃতীয়টার বেলাতেও counterexample.  চার
  নম্বরের জন্য counterexample  হবে ${\mathbb R}$-এর মধ্যে ${\mathbb Q}.$  <p></p>
@@ -1195,7 +1215,7 @@ Then $\sigma\subseteq\tau,$  since $\tau$  is the largest topology.
 <p></p>
 $\tau$  has a basis $\{~\{n\}~:~n\in{\mathbb N}~\}.$  
 <p></p>
-Now for $n\geg 2$  we have $\{n\} = (n-1,n+1)$  in ${\mathbb N}.$  Since $(n-1,n+1)\in\sigma,$ hence $\{n\} \in\sigma.$
+Now for $n\geq 2$  we have $\{n\} = (n-1,n+1)$  in ${\mathbb N}.$  Since $(n-1,n+1)\in\sigma,$ hence $\{n\} \in\sigma.$
 <p></p>
 Also $\{1\} = (-\infty,2)\in\sigma.$  
 <p></p>
