--- a/topo/topo2.html
+++ b/topo/topo2.html
@@ -1099,14 +1099,16 @@ then $X$ is a $T_2$ space.[2]
 <p></p>
 <b>SOLUTION:</b><b><font color="#0000cc">
 The statement is false. 
+</font></b>
+দুঃখের ব্যাপার এর কোনো সহজ counterexample  আমার জানা নেই৷ Wikipedia-র
+ <a href="https://topospaces.subwiki.org/wiki/US_not_implies_Hausdorff">এখানে</a>  একটা 
+counterexample  দেওয়া আছে বটে, কিন্তু সেটা ভুল৷ 1937-এ Urysohn  নামের একজন বিখ্যাত 
+গণিতজ্ঞ যখন topology-র উপর বক্তৃতা দিচ্ছিলেন, তখন উপস্থিত আরেকজন বিখ্যাত গণিতজ্ঞ তাঁকে এই 
+প্রশ্নটা জিজ্ঞাসা করেন৷ উত্তরটা বেরিয়েছিল দুই বছর পরে একটা গবেষণাপত্রে৷ সেই পেপারটা ফরাসী ভাষায় লেখা, এবং 
+আমি জোগাড় করতে পারিনি৷ আরেকটা counterexample  আছে <a href="refs/antihaus.pdf">এই পেপারে</a>৷ সেটা এতই 
+জটিল যে এখানে দিচ্ছি না৷ 
 <p></p>
-
-<u>Counterexample</u>:
-<p></p>
-We consider ${\mathbb N}$  with cofinite topology. Here a sequence is convergent if and only if it is eventually constant. Hence
- limit, if its exists, must be unique. However, here no two non-empty open sets are disjoint. So it is not 
-Hausdorff. 
-</font></b> ///
+ ///
 </p>
 
 <p></p>
