--- a/topo/topo2.html
+++ b/topo/topo2.html
@@ -1105,7 +1105,7 @@ The statement is false.
 counterexample  দেওয়া আছে বটে, কিন্তু সেটা ভুল৷ 1937-এ Urysohn  নামের একজন বিখ্যাত 
 গণিতজ্ঞ যখন topology-র উপর বক্তৃতা দিচ্ছিলেন, তখন উপস্থিত আরেকজন বিখ্যাত গণিতজ্ঞ তাঁকে এই 
 প্রশ্নটা জিজ্ঞাসা করেন৷ উত্তরটা বেরিয়েছিল দুই বছর পরে একটা গবেষণাপত্রে৷ সেই পেপারটা ফরাসী ভাষায় লেখা, এবং 
-আমি জোগাড় করতে পারিনি৷ আরেকটা counterexample  আছে <a href="refs/antihaus.pdf">এই পেপারে</a>৷ সেটা এতই 
+আমি জোগাড় করতে পারিনি৷ আরেকটা counterexample  আছে <a href="ref/antihaus.pdf">এই পেপারে</a>৷ সেটা এতই 
 জটিল যে এখানে দিচ্ছি না৷ 
 <p></p>
  ///
