--- a/topo/topo2.html
+++ b/topo/topo2.html
@@ -1099,15 +1099,25 @@ then $X$ is a $T_2$ space.[2]
 <p></p>
 <b>SOLUTION:</b><b><font color="#0000cc">
 The statement is false. 
-</font></b>
-দুঃখের ব্যাপার এর কোনো সহজ counterexample  আমার জানা নেই৷ Wikipedia-র
- <a href="https://topospaces.subwiki.org/wiki/US_not_implies_Hausdorff">এখানে</a>  একটা 
-counterexample  দেওয়া আছে বটে, কিন্তু সেটা ভুল৷ 1937-এ Urysohn  নামের একজন বিখ্যাত 
-গণিতজ্ঞ যখন topology-র উপর বক্তৃতা দিচ্ছিলেন, তখন উপস্থিত আরেকজন বিখ্যাত গণিতজ্ঞ তাঁকে এই 
-প্রশ্নটা জিজ্ঞাসা করেন৷ উত্তরটা বেরিয়েছিল দুই বছর পরে একটা গবেষণাপত্রে৷ সেই পেপারটা ফরাসী ভাষায় লেখা, এবং 
-আমি জোগাড় করতে পারিনি৷ আরেকটা counterexample  আছে <a href="ref/antihaus.pdf">এই পেপারে</a>৷ সেটা এতই 
-জটিল যে এখানে দিচ্ছি না৷ 
 <p></p>
+
+<u>Counterxample</u>: ${\mathbb R}$  with co-countable topology. 
+<p></p>
+It is not Hausdorff, because all non-empty open sets intersect. 
+<p></p>
+Each convergent sequence is eventually constant. 
+<blockquote>
+<b>Because:</b>
+Let $x_n\rightarrow L.$  Then $G = \{x_n\}^c\cup\{L\}$  is an open neighbourhood of $L.$  So
+ $\exists K\in{\mathbb N}~~\forall n\geq K~~x_n\in G.$  
+<p></p>
+But $G$  contains no $x_n$  except those equal to $L.$  Hence we must have $\exists K\in{\mathbb N}~~\forall n\geq K~~x_n = L.$
+</blockquote> 
+
+</font></b>
+ Wikipedia-র
+ <a href="https://topospaces.subwiki.org/wiki/US_not_implies_Hausdorff">এখানে</a>  একটা 
+counterexample  দেওয়া আছে, যেটা ভুল৷
  ///
 </p>
 
